--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html lang="en">
 
+<head>
+    <link rel="stylesheet" href="style.css">
+</head>
+
 <body style="margin: 0px;">
     <script type="module">
         import init from './thunder.js'
