--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body style="margin: 0px;">
+<body>
     <script type="module">
         import init from './thunder.js'
 
